--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
 }
 .dark-color{
     color: #252432;
-    /* color: chartreuse; */
+    /* color:chocolate; */
 }
 .btn{
     color: #FFFFFF;
@@ -87,4 +87,31 @@ header {
     height: 310px;
     width: 400px;
     border-radius: 38px;
+}
+
+
+/* productive-action-box */
+.productive-action-box h2{
+    font-size: 38px;
+    margin-bottom: 30px;
+}
+.main-s2{
+    background-color: #4d47ff2f;
+    border-radius: 25px;
+    text-align: center;
+    padding: 50px 0;
+    margin-bottom: 100px;
+}
+.s2-div-items{
+    display: flex;
+    justify-content: space-around;
+}
+.div-item .p{
+    font-size: 80px;
+    font-weight: 700;
+}
+.div-item .q{
+    opacity: 50%;
+    font-size: 20px;
+    margin: 0;
 }
