--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ header {
     font-size: 40px;
 }
 .div-item p, .s4-div p{
-    opacity: 50%;
+    opacity: 0.5;
     margin: 20px 0;
     font-size: 20px;
 }
@@ -114,7 +114,7 @@ header {
     font-weight: 700;
 }
 .div-item .q{
-    opacity: 50%;
+    opacity: 0.5;
     font-size: 20px;
     margin: 0;
 }
@@ -157,12 +157,12 @@ header {
 .py{
     font-size: 15px;
     font-weight: 700;
-    opacity: 70%;
+    opacity: 0.7;
 }
 .pz{
     font-size: 14px;
     font-weight: 600;
-    opacity: 40%;
+    opacity: 0.4;
 }
 .s4-div{
     display: block;
@@ -211,4 +211,37 @@ header {
 }
 .smt{
     width: 100%;
+}
+/* footer design */
+.footer-bg{
+    background-color: #FFFFFF;
+    border-top: 1px solid rgba(0, 0, 0, 0.096);
+    padding: 100px;
+    text-align: center;
+}
+.ft{
+    font-size: 100px;
+    font-weight: 900;
+}
+.fp{
+    font-size: 18px;
+    font-weight: 400;
+    opacity: 0.5;
+}
+.ul{
+    display: flex;
+    gap: 40px;
+    margin-top: 30px;
+    justify-content: center;
+}
+.ul li{
+    list-style: none;
+}
+.ul a{
+    text-decoration: none;
+    
+}
+a:hover{
+    color: #4E47FF;
+    opacity: 1;
 }
